--- a/heroku-html-buildpack-master/public/error.html
+++ b/heroku-html-buildpack-master/public/error.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="container">
-        <p>Page - 404</p>
+        <p>Hello CC</p>
       </div>
 
       <div class="footer">
